--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				     </div>
 				</div>
 				<div id="news">
-					<h2>Updates</h2>
+					<h2>News and Updates</h2>
 					<br>
 					<ul>
 					      <li>[2019/03/11] One paper on facial age estimation is accepted to <a href=http://www.icme2019.org/>IEEE ICME 2019</a> as Oral Presentation <a href=https://xxgc.nxu.edu.cn/info/1038/3510.htm>[News in NXU]</a>.</li>
