--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 					<h2>News and Updates</h2>
 					<br>
 					<ul>
-					      <li>[2019/04/24] One paper on face alignment is accepted to <a href=http://www.icme2019.org/conf_workshops> of IEEE ICME - Workshop on Information Theory and Multimedia 2019 </a> <a href=https://xxgc.nxu.edu.cn/info/1038/3510.htm>[News in NXU]</a>.</li>
+					      <li>[2019/04/24] One paper on face alignment is accepted to <a href=http://www.icme2019.org/conf_workshops> IEEE ICME - Workshop on Information Theory and Multimedia 2019 </a> <a href=https://xxgc.nxu.edu.cn/info/1038/3510.htm></a>.</li>
 						<br>
 					      <li>[2019/03/11] One paper on facial age estimation is accepted to <a href=http://www.icme2019.org/>IEEE ICME 2019</a> as Oral Presentation <a href=https://xxgc.nxu.edu.cn/info/1038/3510.htm>[News in NXU]</a>.</li>
 						<br>
