--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
 					<ul>
 					      <li>[2019/04/24] One paper on face alignment is accepted to <a href=http://www.icme2019.org/conf_workshops> IEEE ICME - Workshop on Information Theory and Multimedia 2019 </a> <a href=https://xxgc.nxu.edu.cn/info/1038/3510.htm></a>.</li>
 						<br>
-					      <li>[2019/03/11] One paper on facial age estimation is accepted to <a href=http://www.icme2019.org/>IEEE ICME 2019</a> as Oral Presentation <a href=https://xxgc.nxu.edu.cn/info/1038/3510.htm>[News in NXU]</a>.</li>
+					      <li>[2019/03/11] One paper on facial age estimation is accepted to <a href=http://www.icme2019.org/>IEEE ICME 2019</a> as Oral Presentation. <a href=https://xxgc.nxu.edu.cn/info/1038/3510.htm>[News in NXU]</a></li>
 						<br>
 					      <li>[2018/12/31] I serve as the Associate Professor in <a href=https://xxgc.nxu.edu.cn/info/1231/3006.htm>Ningxia University</a>. </li>
 						<br>
-						<li>[2018/12/02] One paper on face alignment is accepted to <a href=https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=34>IEEE T-PAMI</a> as Regular Paper <a href=https://news.nxu.edu.cn/info/1005/23177.htm>[News in NXU]</a>.</li>
+						<li>[2018/12/02] One paper on face alignment is accepted to <a href=https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=34>IEEE T-PAMI</a> as Regular Paper. <a href=https://news.nxu.edu.cn/info/1005/23177.htm>[News in NXU]</a></li>
 						<br>
 					      <li>[2018/08/20] I give a talk on <a href=http://ivg.au.tsinghua.edu.cn/people/Yueqi_Duan/ICPR18_metric.pdf>Deep Metric Learning for Pattern Recognition</a> at the <a href=http://www.icpr2018.org/index.php?m=content&c=index&a=show&catid=47&id=2>Tutorial of IEEE ICPR 2018</a>. </li><br>
 					      <li>[2018/07/01] I am honored with the Outstanding Ph.D. Thesis of Tsinghua University. </li><br>
