--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					<ul>
 					      <li>[2019/04/24] One paper on face alignment is accepted to <a href=http://www.icme2019.org/conf_workshops> IEEE ICME - Workshop on Information Theory and Multimedia 2019 </a> <a href=https://xxgc.nxu.edu.cn/info/1038/3510.htm></a>.</li>
 						<br>
-					      <li>[2019/03/11] One paper on facial age estimation is accepted to <a href=http://www.icme2019.org/>IEEE ICME 2019</a> as Oral Presentation. <a href=https://xxgc.nxu.edu.cn/info/1038/3510.htm>[News in NXU]</a></li>
+					      <li>[2019/03/11] One paper on facial age estimation is accepted to <a href=http://www.icme2019.org/>IEEE ICME 2019</a> for Oral Presentation. <a href=https://xxgc.nxu.edu.cn/info/1038/3510.htm>[News in NXU]</a></li>
 						<br>
 					      <li>[2018/12/31] I serve as the Associate Professor in <a href=https://xxgc.nxu.edu.cn/info/1231/3006.htm>Ningxia University</a>. </li>
 						<br>
@@ -236,7 +236,7 @@
 									<div class="pub-info">
 										<h6>Similarity-Aware Deep Adversarial Learning for Facial Age Estimation</h6><br>
 										Penghui Sun, <span><b>Hao Liu</b><span>*, Xing Wang, Zhenhua Yu and Suping Wu.<br>
-                           						     <i>IEEE International Conference on Multimedia and Expo (<b>ICME 2019</b>), accepted for Oral Presentation.</i><br>
+                           						     <i>IEEE International Conference on Multimedia and Expo (<b>ICME 2019</b>), accepted to Oral Presentation.</i><br>
                               					  [<a href="">In Press</a>]
                            					 </span></span>
 									</div>
