--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 									<div class="pub-info">
 										<h6>Learning Reasoning-Decision Networks for Robust Face Alignment</h6><br>
 										<span><b>Hao Liu</b>, <span>Jiwen Lu*, Minghao Guo, Suping Wu and Jie Zhou.<br>
-                                <i>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>T-PAMI</b>) , accepted.</i><br>
+                                <i>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>T-PAMI</b>), accepted. (Regular Paper)</i><br>
                                 [<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8570839">Paper</a>]  [<a href="https://github.com/HaoLiuPhd/RDN-master">Code</a>]
                             </span></span>
 									</div>
@@ -142,7 +142,7 @@
 									<div class="pub-info">
 										<h6>Two-Stream Transformer Networks for Video-based Face Alignment</h6><br>
 										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng and Jie Zhou.<br>
-										<i> IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>T-PAMI</b>) , 40(11): 2546-2554, 2018.</i><br><br> 
+										<i> IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>T-PAMI</b>) , 40(11): 2546-2554, 2018. (Regular Paper)</i><br><br> 
 											     [<a href="paper/TPAMI2018.pdf">Paper</a>]
 									</div>
 								</td>
@@ -156,7 +156,7 @@
 									<div class="pub-info">
 										<h6>Learning Deep Sharable and Structural Detectors for Face Alignment</h6><br>
 										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng and Jie Zhou.<br>
-										<i> IEEE Transactions on Image Processing (<b>T-IP</b>) , 26(4): 1666-1678, 2017.</i> <br><br> 
+										<i> IEEE Transactions on Image Processing (<b>T-IP</b>) , 26(4): 1666-1678, 2017. (Regular Paper)</i> <br><br> 
 											     [<a href="paper/2017_Learning deep sharable and structural detectors for face alignment.pdf">Paper</a>]
 									</div>
 								</td>
@@ -172,7 +172,7 @@
 									<div class="pub-info">
 										<h6>Ordinal Deep Learning for Facial Age Estimation</h6><br>
 										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng and Jie Zhou.<br>
-										<i> IEEE Transactions on Circuits and Systems for Video Technology (<b>T-CSVT</b>), 29(2): 486-501, 2019.</i> <br><br> [<a href="paper/TCSVT2019.pdf">Paper</a>]
+										<i> IEEE Transactions on Circuits and Systems for Video Technology (<b>T-CSVT</b>), 29(2): 486-501, 2019. (Regular Paper)</i> <br><br> [<a href="paper/TCSVT2019.pdf">Paper</a>]
 									</div>
 								</td>
 							</tr>
@@ -185,7 +185,7 @@
 									<div class="pub-info">
 										<h6>Label-Sensitive Deep Metric Learning for Facial Age Estimation</h6><br>
 										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng and Jie Zhou.<br>
-										<i> IEEE Transactions on Information Forensics and Security (<b>T-IFS</b>), 13(2): 292-305, 2018.</i> <br><br> [<a href="paper/TIFS18.pdf">Paper</a>]
+										<i> IEEE Transactions on Information Forensics and Security (<b>T-IFS</b>), 13(2): 292-305, 2018. (Regular Paper)</i> <br><br> [<a href="paper/TIFS18.pdf">Paper</a>]
 									</div>
 								</td>
 							</tr>
@@ -200,7 +200,7 @@
 									<div class="pub-info">
 										<h6>Group-Aware Deep Feature Learning for Facial Age Estimation</h6><br>
 										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng and Jie Zhou.<br>
-										<i> Pattern Recognition (<b>PR</b>), 66: 82-94, 2017.</i> <br><br> 
+										<i> Pattern Recognition (<b>PR</b>), 66: 82-94, 2017.</i>  (Regular Paper) <br><br> 
 										[<a href="paper/PR17.pdf">Paper</a>]
 									</div>
 								</td>
@@ -236,7 +236,7 @@
 									<div class="pub-info">
 										<h6>Similarity-Aware Deep Adversarial Learning for Facial Age Estimation</h6><br>
 										Penghui Sun, <span><b>Hao Liu</b><span>*, Xing Wang, Zhenhua Yu and Suping Wu.<br>
-                           						     <i>IEEE International Conference on Multimedia and Expo (<b>ICME 2019</b>), accepted to Oral Presentation.</i><br>
+                           						     <i>IEEE International Conference on Multimedia and Expo (<b>ICME 2019</b>), accepted to Oral Presentation. (Regular Paper)</i><br>
                               					  [<a href="">In Press</a>]
                            					 </span></span>
 									</div>
@@ -265,7 +265,7 @@
 									<div class="pub-info">
 										<h6>Ordinal Deep Feature Learning for Facial Age Estimation</h6><br>
 										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng and Jie Zhou.<br>
-										<i> IEEE International Conference on Automatic Face and Gesture Recognition (<b>FG 2017</b>), 157-164.</i> <br><br> [<a href="paper/FG17.pdf">Paper</a>]
+										<i> IEEE International Conference on Automatic Face and Gesture Recognition (<b>FG 2017</b>), 157-164. (Regular Paper)</i> <br><br> [<a href="paper/FG17.pdf">Paper</a>]
 									</div>
 								</td>
 							</tr>
