--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 										<h6>Similarity-Aware Deep Adversarial Learning for Facial Age Estimation</h6><br>
 										Penghui Sun, <span><b>Hao Liu</b><span>*, Xing Wang, Zhenhua Yu and Suping Wu.<br>
                            						     <i>IEEE International Conference on Multimedia and Expo (<b>ICME 2019</b>), accepted to Oral Presentation. (Regular Paper)</i><br>
-                              					  [<a href="">In Press</a>]
+                              					  [<a href="paper/ICME2019.pdf">Paper</a>]
                            					 </span></span>
 									</div>
 								</td>
@@ -251,7 +251,7 @@
 										<h6>Dual-Cycle Deep Reinforcement Learning for Stabling Face Tracking</h6><br>
 										Congcong Zhu, Zhenhua Yu, Suping Wu and <span><b>Hao Liu</b><span>*.<br>
                            						     <i>IEEE International Conference on Multimedia and Expo (<b>ICME 2019</b>), accepted to Workshop on Information Theory and Multimedia.</i><br>
-                              					  [<a href="">In Press</a>]
+                              					  [<a href="paper/ICMEW2019.pdf">Paper</a>]
                            					 </span></span>
 									</div>
 								</td>
