--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									  <p>Ph.D supervised by Professor <a href="http://www.tsinghua.edu.cn/publish/auen/1713/2011/20110506105532098625469/20110506105532098625469_.html">Jie Zhou</a> and Professor <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/">Jiwen Lu</a>.</p>
 							                  <p>Master supervised by Professor <a href="http://people.ucas.ac.cn/~0003060?language=en">Qingming Huang</a>.</p>
 								  <p>Contact Email: <a href="mailto:liuhao@nxu.edu.cn">liuhao [at] nxu.edu.cn</a></p>
-							          <p> <a href="https://scholar.google.com/citations?user=h4ZIubgAAAAJ&hl=en">Google Scholar Citation</a></p> | <p><a href="https://github.com/HaoLiuPhd/"></a></p>
+							          <p> <a href="https://scholar.google.com/citations?user=h4ZIubgAAAAJ&hl=en">Google Scholar Citation</a> | <a href="https://github.com/HaoLiuPhd/"></a></p>
 								</span>
 								</td>
 								<td class="col-3">
